plugins/opa/examples-v2/annotation-blocked/policy.success.yaml
# This manifest is used to test the accompanying OPA policy.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: policy-test
  namespace: default
  annotations:
    # Lack of this annotation will cause the policy to succeed.
    #certmanager.k8s.io/issuer: dummy-value-to-test-this-policy
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp
            port:
              number: 80
